2003-02-21  Al Riddoch  <alriddoch@zepler.org>

	* src/Terrain.h: Add accessor for point store.

2003-02-17  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.h, src/Segment.cpp: Add a row and column of extra
	  heightpoints to the segment to make it easier to render.

2003-01-31  Al Riddoch  <alriddoch@zepler.org>

	* Convert to using pkg-config

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h: Fully implement qRMD with roughness
	  and falloff.

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h: First stab at qRMD algorithm.

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Terrain.cpp: Fix segment dependencies.

2003-01-28  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h, src/Terrain.cpp: Implement
	  midpoint based terrain algorithm, currently without any
	  displacement.

2003-01-20  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.cpp, src/Segment.h, src/Terrain.cpp, src/Terrain.h:
	  Switch to using floats instead of doubles internally for performance.

2003-01-19  Al Riddoch  <alriddoch@zepler.org>

	* src/Segment.h, src/Segment.cpp: Add class for terrain segment, which
	  currently contains an interpolated sloped area.

	* src/Terrain.h, src/Terrain.cpp: Add functionality required to manage
	  segments in the terrain.